--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "comat"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 authors = ["bendn <bend.n@outlook.com>"]
 license = "MIT"
@@ -13,4 +13,4 @@ proc_macro = true
 [dependencies]
 proc-macro2 = "1.0.67"
 quote = "1.0.32"
-syn = { version = "2.0.15", features = ["full"] }
+syn = "2.0.15"
